--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,7 @@ body {
 
 .app {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -428,7 +428,6 @@ body {
 
     @media only screen and (max-width: 1080px) {
       width: 100%;
-      margin-bottom: 24px;
     }
 
     .center {
